basic setup api

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,27 @@
   <title>Quiz App</title>
 </head>
 <body>
+ <div>
+   <p id='score-display'>Score</p>
+   <p id='high-score-display'>High Score</p>
+   <p id='progress-display'>Progress: </p>
+ </div>
   <main>
+    <h1>WELCOME TO OUR TRIVIA QUIZ</h1>
+    <h2>Test your smarts and see how high you can score!</h2>
+    <button id='start-button' type='button'>START</button>
     <section class="status"></section>
     <section class="display"></section>
   </main>
+
+
+
+<div class='qestion-section'></div>
+<ul>${}</ul>
+<li>${}</li>
+</div>
+
+
 
 </body>
 </html>
